# djangorestframework-camel-case2

./: pyproject.toml
tests/: test_djangorestframework_camel_case2.py
