[tool.poetry]
name = "djangorestframework-camel-case2"
version = "0.2.3"
description = "Camel case JSON support for Django REST framework"
authors = ["fadawar <fadawar@gmail.com>"]
license = "BSD"

readme = "README.md"
include = ["CHANGELOG.md"]

homepage = "https://github.com/fadawar/djangorestframework-camel-case2"

keywords = ['djangorestframework_camel_case2']
classifiers = [
    'Development Status :: 4 - Beta',
    'Intended Audience :: Developers',
    'License :: OSI Approved :: BSD License',
    'Natural Language :: English',
    "Programming Language :: Python :: 2",
    'Programming Language :: Python :: 2.6',
    'Programming Language :: Python :: 2.7',
    'Programming Language :: Python :: 3',
    'Programming Language :: Python :: 3.3',
]

[tool.poetry.dependencies]
python = "*"

[tool.poetry.dev-dependencies]
pytest = "^3"
